syntax = "proto3";

package pass.keeper;

option go_package = "pkg/grpc_api";

message RegisterUserRequest {
  string login = 1;
  string password = 2;
}

message RegisterUserResponse {}

message AuthUserRequest {
  string login = 1;
  string password = 2;
}

message AuthUserResponse {
  string token = 1;
}

message AddDataLoginPassRequest {
  string title = 1;
  string login = 2;
  string pass = 3;
}

message AddDataLoginPassResponse {}

service PassKeeper {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc AuthUser(AuthUserRequest) returns (AuthUserResponse);
  rpc AddDataLoginPass(AddDataLoginPassRequest) returns (AddDataLoginPassResponse);
}